# AP1

./: .gitattributes  .gitignore  Makefile  README.md  TODO list.md  ap1  install.sh  start.sh  test-phase1.sh  wp3_manual
api/: README.md  go.mod  main.go
api/handlers/: README.md  auth.go  config.go  core_proxy.go  plugins.go  portal.go  profiles.go  recon.go  status.go  system.go
api/middleware/: README.md  auth.go  auth_test.go
api/routes/: README.md  router.go
api/server/: portal.go
api/services/: README.md  config.go  config_test.go  db.go  plugins.go  watcher.go
api/system/: config.go  config_test.go  control.go  (+1 more)
cli/: README.md  go.mod  go.sum  main.go  repl.go  tui.go  wp3_commands_outputs
config/: README.md  global.yaml  plugins.yaml
core/: Cargo.toml  README.md  build.rs  packet_capture.cpp
core/src/: beacon_flood.rs  captive_portal.rs  config.rs  database.rs  deauth.rs  dhcp.rs  dns.rs  event_bus.rs  hostapd.rs  http_proxy.rs  https_detection.rs  improvements.rs  interfaces.rs  logging.rs  main.rs  mitm.rs  networking.rs  orchestrator.rs  packet_capture.rs  plugin_system.rs  recon.rs  sniff.rs  state_machine.rs  webui.rs
core/src/ap_manager/: mod.rs
core/src/proxy/: mod.rs
core/src/system_control/: mod.rs
core/src/traffic_engine/: mod.rs
core/src/utils/: mod.rs
docker/: Dockerfile.api  Dockerfile.backend  Dockerfile.core  README.md  docker-compose.yml
docs/: api.md  architecture.md  fake_connection.md  plugins.md  setup.md  structure_comparison.md  system.md
plugins/: README.md  credential_harvester.py
system/: README.md
(+34 files in other folders)
