[package]
name = "ap1_core"
version = "0.1.0"
authors = ["AP1 Team <ap1@example.com>"]
edition = "2021"
build = "build.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1.0", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
ap1_plugin_loader = { path = "../plugins/plugin_loader" }
sqlite = "0.32"
tera = "1.19"
chrono = "0.4"

[build-dependencies]
cc = "1.0"
